[#5] docs: readme수정